data/derived/comb/progs/unify/prog1716.ml.out
Characters 162-185:
  (if addit >= 10 then 1 else 0, num @ [addit mod 10]) in
                              ^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
